 *
 *
 * Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 * All rights reserved.
 *
 * Copyright (c) 2011-2015 Institute of Industrial Science, The University of Tokyo. 
 * All rights reserved.
 *
 * Copyright (c) 2012-2015 Advanced Institute for Computational Science, RIKEN. 
 * All rights reserved.
 *
 */


REVISION HISTORY
================

--------------------------
2015-06-20
r1611 add ffvc-config
- arrange Geometry.C

--------------------------
2015-06-18
r1610 set state in Geometry::paintCutOnPoint()
- move onBit()/offBit() from VoxInfo.h to FB_Define.h
- add special BC polynomial6 for chiba-u
- modify quantizeCut()
- add range for Glyph

--------------------------
2015-06-14
r1609 bug fix on Fujitsu sparc => Geometry.C L257
- error: MainLoop() C.Interval[Control::tg_End].printInfo("tg_End") destroys array

--------------------------
2015-06-10
r1608 clean package

--------------------------
2015-06-08
r1607 improve fill() algorithm
- This fill algorithm can successfully generate a voxel model for Nasal2015 case.

--------------------------
2015-06-06
r1606 introduce BUILD_DIR to keep source directory clean
- Change to run configure
- Change configure.ac

--------------------------
2015-06-04
r1605 check fill algo.
- ducky, cavity, BMW_M3, nasal(0.2, 0.4mm)
- enable fileout of bvx format
- remove obsolete svx output

--------------------------
2015-06-01
r1604 refine fill algorithm
- remove fill_bid.h


--------------------------
2015-05-24
r1603 modify isnan()
- define ISNAN in FBdefine.h

--------------------------
2015-03-14
r1602 update libraries

--------------------------
2015-03-08
r1601 bug fix of loadBCs()
- set dummy values for cmp[m].medium in case of Periodic
- skip rading filepath for intrinsic problems

--------------------------
2015-03-01
r1600 remove comment in Initialize

r1599 import statistic code
- confirm detail later

r1598 bug fix in fillSeedBcdInner(), getFillParam()