@@ -67,7 +67,7 @@ AM_INIT_AUTOMAKE()
 # revision No.
 #
 
-FFVC_REVISION="20150620_1300"
+FFVC_REVISION="20150620_1500"
 AC_SUBST(FFVC_REVISION)
 
 
