@@ -21,7 +21,7 @@
 #define _FFVC_VERSION_H_
 
 #define FFVC_VERSION_NO  "2.2.2"
-#define FFVC_REVISION    "20150620_1300"
+#define FFVC_REVISION    "20150620_1500"
 
 #endif /* _FFVC_VERSION_H_ */
 
